--- a/tasks/index.html
+++ b/tasks/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -19,5 +19,26 @@
     </div>
 
     <script src="./task_one.js"></script>
+  </body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Food App</title>
+</head>
+<body style="padding: 0px; margin: 0px;">
+  <div id="container" style="min-height: 100vh; background: linear-gradient(to right, #e40f0f, #d26bc8); display: flex; flex-direction: column; align-items: center; justify-content: center;">
+    <div id="app" style=" border: 4px solid rgb(118, 110, 110); padding: 25px;">
+      <h1>FOOD ORDER </h1>
+      <input type="text" id="foodName" placeholder="Enter food name">
+      <button id="addFood" style="background-color: rgb(171, 171, 233); outline: none; box-shadow: none; margin-top: 10px; color: white; border: none; padding: 10px;">Add Food</button>
+      <ul id="foodList"></ul>
+    </div>
+  </div>
+  <script src="./task_one.js"></script>
   </body>
 </html>
